[package]
name = "mrktws-news"
version = "1.0.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE.txt"
readme = "README.md"

[dependencies]
chrono = "0.4.31"
clap = "4.4.10"
env_logger = "0.10.1"
json = "0.12.4"
log = "0.4.20"
rust-ini = "0.20.0"
sqlite = "0.32.0"
ureq = { version = "2.9.1", features = ["json"] }
